Improve text copy

--- a/readthedocs/ssh/templates/ssh/keys_generate.html
+++ b/readthedocs/ssh/templates/ssh/keys_generate.html
@@ -9,7 +9,7 @@
 
 {% block project_edit_content %}
 
-  <p>Use this button to auto-generate a SSH pair keys (public and private). You can use these keys to give us access to your private repositories.</p>
+  <p>Auto-generate a SSH pair keys (public and private). You can use these keys to give us access to your private repositories.</p>
 
   <form method="post" action=".">
     {% csrf_token %}
